syntax = "proto3";
package AFMsg;

message PBArray {
  map<uint32, uint64> pb_uint64 = 1;
}

message PBDataEx {
  map<uint32, bool> pb_bool = 1;       // bool
  map<uint32, sint32> pb_int32 = 2;    // int32
  map<uint32, uint32> pb_uint32 = 3;   // uint32
  map<uint32, sint64> pb_int64 = 4;    // int64
  map<uint32, uint64> pb_uint64 = 5;   // uint64
  map<uint32, float> pb_float = 6;     // float
  map<uint32, double> pb_double = 7;   // double
  map<uint32, bytes> pb_string = 8;    // string
  map<uint32, PBArray> pb_array = 9;   // array
  map<uint32, PBTable> pb_table = 10;  // table
  map<uint32, PBDataEx> pb_data = 11;  // multi-data
}

message PBTable {
  map<uint32, PBDataEx> pb_datas = 1;
}